--- a/Arrays-Loops/todo_list.html
+++ b/Arrays-Loops/todo_list.html
@@ -8,6 +8,7 @@
 <body>
     <p>TODO LIST</p>
     <input class="js-input" placeholder="TODO NAME">
+    <input type="date">
     <button onclick="
     addTodo();
     ">Add</button>
