--- a/RockPaperScissors/RPS_async.html
+++ b/RockPaperScissors/RPS_async.html
@@ -36,7 +36,7 @@
       updateScoreElement();
     " class="reset-score-button">Reset Score</button>
     <button class="autoplay" onclick="
-    ">Auto Play</button>
+    autoplay();">Auto Play</button>
     <script src="./rps1.js"></script>
   </body>
 </html>
