Added forEachLoop Concept

--- a/AdvancedFunctions/1.html
+++ b/AdvancedFunctions/1.html
@@ -45,6 +45,7 @@
             console.log('hello4');
         });
         */
+       /*
        setTimeout(function(){
         console.log('timeout');
         console.log('timeout2');
@@ -56,6 +57,18 @@
        }, 3000);
 
        console.log('next line 2');
+       */
+      [
+        'make dinner',
+        'wash dishes',
+        'watch movie',  
+      ].forEach(function(value,index){
+        if(value === 'wash dishes'){
+            return;
+        }
+        console.log(index);
+        console.log(value);
+      });
     </script>
 </body>
 </html>
